--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "autoprefixer": "^10.3.7",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "moment": "^2.29.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.2",
     "postcss-cli": "^9.0.1",
     "socket.io": "^4.3.1"
   },
@@ -18,6 +22,7 @@
     "tailwindcss": "^2.2.17"
   },
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:css": "postcss -w public/css/tailwind.css -o public/css/index.css"
   },
