--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.2",
