--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_MYSQL_POST=3306
 DB_MYSQL_USER=root
 DB_MYSQL_PW=admin
 DB_MYSQL_DB_NAME=chatdb
+# REACT_APP_SERVER_URL=https://api.hohocompany.co.kr
+ REACT_APP_SERVER_URL=http://172.30.1.27:5000
