--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
     "autoprefixer": "^10.3.7",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -11,6 +13,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "fullcalendar": "^5.10.1",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
